# RIOS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: domains.yaml  settings.yaml
prompts/v1/: gap_generation.md  gap_generation_prompt.txt
src/rios/: __init__.py
src/rios/core/: config.py  logging_setup.py  schemas.py
src/rios/gap_engine/: __init__.py  generator.py
src/rios/ingestion/: __init__.py  dedup.py  screening.py
src/rios/journals/: __init__.py  recommender.py
src/rios/literature/: __init__.py  crossref.py  multi_source.py  openalex.py  semantic_scholar.py
src/rios/methodology/: __init__.py  recommender.py  taxonomy.py
src/rios/rag/: __init__.py  chunking.py  vector_store.py
src/rios/reports/: __init__.py  docx_report.py  json_report.py
src/rios/review/: __init__.py  review_manager.py
tests/: test_chunking.py  test_config.py  test_crossref.py  test_dedup.py  test_docx_report.py  test_generator.py  test_journal_recommender.py  test_json_report.py  test_methodology_recommender.py  test_multi_source.py  test_openalex.py  test_review_manager.py  test_screening.py  test_semantic_scholar.py  test_vector_store.py
