[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rios"
version = "0.1.0"
description = "Research Intelligence Operating System"
authors = [{ name = "Suman_Econ (UAS-B)" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
